--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,37 @@
 @import "helpers/mixins";
 @import "helpers/variables";
 @import "core/reset";
+
+.preview-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+
+  &__item {
+    position: relative;
+    display: inline-block;
+
+    img {
+      max-width: 100px;
+      max-height: 100px;
+      border: 1px solid #ddd;
+    }
+  }
+
+  &__remove {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    border: none;
+    border-radius: 50%;
+    line-height: 1;
+    color: #fff;
+    background-color: #f00;
+    cursor: pointer;
+  }
+}
